[tool.poetry]
name = "kanagat-chattybot"
version = "0.1.0"
description = ""
authors = ["Ash_K <77124115+tsg-ash-kanagat@users.noreply.github.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
openai = "^1.28.1"
streamlit = "^1.34.0"
python-dotenv = "^1.0.1"
streamlit-chat = "^0.1.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
